--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <nav>
         <a class="atual">Ementa</a>
         <a href="./topicos.html">Tópicos</a>
-        <a href="./objetivos.html#objetivos">Objetivos</a>
-        <a href="./objetivos.html#criterios">Critérios de Avaliação</a>
-        <a href="./objetivos.html#nota">Calculo da Nota</a>
-        <a href="./objetivos.html#referencias">Referências</a>
+        <a href="./outros.html">Objetivos</a>
+        <a href="./outros.html#criterios">Critérios de Avaliação</a>
+        <a href="./outros.html#nota">Calculo da Nota</a>
+        <a href="./outros.html#referencias">Referências</a>
     </nav>
     <div class="principal">
         <div id="ementa">
