--- a/outros.html
+++ b/outros.html
@@ -22,7 +22,7 @@
     <nav>
         <a href="./index.html">Ementa</a>
         <a href="./topicos.html">Tópicos</a>
-        <a href="#objetivos" class="atual">Objetivos</a>
+        <a href="#objetivos">Objetivos</a>
         <a href="#criterios">Critérios de Avaliação</a>
         <a href="#nota">Calculo da Nota</a>
         <a href="#referencias">Referências</a>
@@ -78,22 +78,58 @@
             <div class="lista">
                 <ul>
                     <li>
-                        <a href="http://dx.doi.org/10.1007/978-1-4302-0350-6">
+                        <a class="bibli" href="http://dx.doi.org/10.1007/978-1-4302-0350-6">
                             Schultz, D. & Cook, C. “Beginning HTML with CSS and XHTML – Modern Guide and Reference”. Apress, 2007. DOI: 
                             <br> http://dx.doi.org/10.1007/978-1-4302-0350-6 (acesso via VPN/Unicamp).
                         </a> 
                     </li>
                     <li>
-                        <a href="http://onlinelibrary.wiley.com/book/10.1002/9781119209423">
+                        <a class="bibli" href="http://onlinelibrary.wiley.com/book/10.1002/9781119209423">
                             McPeak, J. & Wilton, P. “Beginning JavaScript®”. 5th. Ed., John Wiley & Son, 2015. Disponível em:
                             <br> http://onlinelibrary.wiley.com/book/10.1002/9781119209423 (acesso via VPN/Unicamp).
                         </a> 
                     </li>
                     <li>
-                        <a href="https://integrada.minhabiblioteca.com.br/books/9788595023222">
+                        <a class="bibli" href="https://integrada.minhabiblioteca.com.br/books/9788595023222">
                             Saraiva, M. O. “Desenvolvimento de sistemas com PHP”. SAGAH, 2018. Disponível em:
                             <br> https://integrada.minhabiblioteca.com.br/books/9788595023222 (é necessário cadastro via
                             Unicamp).
+                        </a> 
+                    </li>
+                </ul>
+            </div>
+            <h2>Bibliografia Complementar</h2>
+            <div class="lista">
+                <ul>
+                    <li>
+                        <a class="bibli" href="https://www.w3schools.com/">
+                            W3Schools Online Web Tutorials: https://www.w3schools.com/
+                        </a> 
+                    </li>
+                    <li>
+                        <a class="bibli" href="http://developer.mozilla.org/">
+                            Mozilla Developer Network: http://developer.mozilla.org/
+                        </a> 
+                    </li>
+                    <li>
+                        <a class="bibli">
+                            Silva, M. S. “Construindo sites com CSS e (X)HTML Sites controlados 
+                            <br>por folhas de estilo em cascata”. Novatec, 2008.
+                        </a> 
+                    </li>
+                    <li>
+                        <a class="bibli">
+                            Silva, M. S. “JavaScript: Guia do Programador”. Novatec, 2010.
+                        </a> 
+                    </li>
+                    <li>
+                        <a class="bibli">
+                            Niederauer, J. “Desenvolvendo Websites com PHP”, 2ª ed. Novatec, 2011.
+                        </a> 
+                    </li>
+                    <li>
+                        <a class="bibli">
+                            Dall'oglio, P. “PHP: Programando com Orientação a Objetos”, 2a ed. Novatec, 2009.
                         </a> 
                     </li>
                 </ul>
