--- a/topicos.html
+++ b/topicos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>SI401</title>
 </head>
+
 <body>
     <header>
         <a href="http://www.unicamp.br/unicamp/" target="_blank">
@@ -20,28 +22,323 @@
     <nav>
         <a href="./index.html">Ementa</a>
         <a class="atual">Tópicos</a>
-        <a href="./objetivos.html#objetivos">Objetivos</a>
-        <a href="./objetivos.html#criterios">Critérios de Avaliação</a>
-        <a href="./objetivos.html#nota">Calculo da Nota</a>
-        <a href="./objetivos.html#referencias">Referências</a>
+        <a href="./outros.html">Objetivos</a>
+        <a href="./outros.html#criterios">Critérios de Avaliação</a>
+        <a href="./outros.html#nota">Calculo da Nota</a>
+        <a href="./outros.html#referencias">Referências</a>
     </nav>
-    <div class="principal">
+    <div id="principal-topicos" class="principal">
         <div id="topicos">
             <h2>Tópicos tratados na disciplina</h2>
             <ol>
-                <li>Unidade 0: </li>
+                <li class="ol-title">Unidade 0: </li>
                 <ol>
-                    <li>Conteúdo:</li>
+                    <li class="ol-subtitle">Conteúdo:</li>
                     <ul>
-                        <li>instruções gerais sobre a disciplina.</li>
+                        <li class="ul-text">instruções gerais sobre a disciplina.</li>
                     </ul>
-                    <li>Objetivos:</li>
+                    <li class="ol-subtitle">Objetivos:</li>
                     <ul>
-                        <li>descrever como será o funcionamento da disciplina ao longo do semestre, mais especificamente o formato das aulas, o tema do Projeto Final, os critérios de avaliação e os plantões de dúvidas (monitorias).</li>
+                        <li class="ul-text">descrever como será o funcionamento da disciplina ao longo do semestre, mais
+                            especificamente o formato das aulas, o tema do Projeto Final, os critérios de avaliação e os
+                            plantões de dúvidas (monitorias).</li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 1: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text">visão geral sobre o funcionamento da web, com foco nas interações
+                            navegador-servidor, e contextualização da Programação para Web.</li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">descrever em linhas gerais os passos executados a cada requisição feita por
+                            um navegador a um servidor, interpretar uma mensagem HTTP e apresentar o que será discutido
+                            nesse semestre dentro do contexto de Programação para a Web.
+                        </li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 2: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text">Hypertext Markup Language (HTML) e estrutura de documentos HTML (tags,
+                            declarações DOCTYPE, elementos HTML e atributos de elementos HTML).</li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">entender o que é HTML e construir documentos que contenham os elementos
+                            obrigatórios definidos no padrão.
+                        </li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 3: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text">exemplos de elementos HTML (parágrafos, títulos, imagens,
+                            hyperlinks, tabelas, listas e iFrames).
+                        </li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">construir documentos HTML que utilizem os elementos mais
+                            comuns.
+                        </li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 4: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text">o elemento HEAD de HTML.</li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">construir documentos HTML que possuam o elemento
+                            obrigatório HEAD em sua estrutura.
+                        </li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 5: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text"> layouts via HTML</li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">estruturar o conteúdo de documentos HTML em layouts bem
+                            definidos.
+                        </li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 6: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text"> Cascade Style Sheets (CSS): definições, sintaxe e formas de
+                            utilização.
+                        </li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">construir folhas de estilo que definam a aparência de um
+                            documento HTML e compreender a formatação que será aplicada a um
+                            elemento HTML por regras CSS já criadas.
+                        </li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 7: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text">  Cascade Style Sheets (CSS): propriedades de fundo de tela, de
+                            texto e de fonte.
+                        </li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">criar folhas de estilo que explorem as propriedades de fundo de
+                            tela, texto e de fonte de elementos HTML.
+                        </li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 8: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text"> Cascade Style Sheets (CSS): propriedades abreviadas e o modelo
+                            de caixas (box model).
+                        </li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">definição de layouts de páginas explorando o modelo de caixas
+                            de CSS.                            
+                        </li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 9: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text"> programação no front-end com JavaScript: definições, sintaxe,
+                            instruções e o objeto DOM.
+                        </li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">escrever programas básicos, em JavaScript, para serem
+                            executados em navegadores.                            
+                        </li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 10: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text">detecção e reação a eventos via JavaScript.
+                        </li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">escrever programas, em JavaScript e que são executados no
+                            navegador, que reajam a eventos disparados pelo usuário.
+                        </li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 11: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text">manipulação de formulários HTML via JavaScript.
+                        </li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">escrever programas, em JavaScript e que são executados no
+                            navegador, que manipulem dados fornecidos pelo usuário via formulários
+                            HTML.                            
+                        </li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 12: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text">orientação a objetos em JavaScript
+                        </li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">escrever programas, em JavaScript e que são executados no
+                            navegador, seguindo o paradigma de orientação a objetos.
+                        </li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 13: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text">programação no back-end com PHP: infraestrutura necessária e
+                            aspectos gerais da linguagem.
+                        </li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">escrever programas simples, em PHP, que são executados no
+                            servidor.
+                        </li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 14: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text">aspectos específicos da linguagem PHP: operadores, estruturas
+                            de controle e funções.
+                        </li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">escrever programas em PHP para serem executados no servidor.
+                        </li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 15: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text">: PHP e formulários HTML, Server Side Includes.
+                        </li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">escrever programas, em PHP, que recebam e manipulem dados
+                            enviados pelo usuário, do frontend, e a partir de formulários HTML.                            
+                        </li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 16: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text">orientação a objetos em PHP.
+                        </li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">escrever programas, em PHP, seguindo o paradigma de
+                            orientação a objetos.
+                        </li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 17: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text">acesso a Bancos de Dados em PHP via PHP Data Objects (PDO).
+                        </li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">escrever programas, em PHP, que manipulem bancos de dados.
+                        </li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 18: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text">: Cookies e sessões em PHP.
+                        </li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">escrever programas, em PHP, que mantenham sessões abertas
+                            durante a navegação de um mesmo usuário e permitam o fluxo de
+                            informações entre as páginas.
+                        </li>
+                    </ul>
+                </ol>
+                <hr>
+                <li class="ol-title">Unidade 19: </li>
+                <ol>
+                    <li class="ol-subtitle">Conteúdo:</li>
+                    <ul>
+                        <li class="ul-text">Comunicação assíncrona de dados entre back-end (aplicações em
+                            PHP) e front-end (scripts em JavaScript).
+                        </li>
+                    </ul>
+                    <li class="ol-subtitle">Objetivos:</li>
+                    <ul>
+                        <li class="ul-text">escrever aplicações, com front-end escrito em JavaScript e backend em PHP, que troquem dados de maneira assíncrona.
+                        </li>
                     </ul>
                 </ol>
             </ol>
         </div>
     </div>
 </body>
+
 </html>
